# autocalibration/src/auto_camera_calibration_api.py
@@ -84,7 +84,7 @@ class StrategyNotFoundError(CameraCalibrationError):
 
 class CameraCalibrationApi:
   """
-  REST API service for automatic camera calibration in Intel SceneScape.
+  REST API service for automatic camera calibration in Scenescape.
   """
 
   API_VERSION = "1.0.0"
