# autocalibration/src/auto_camera_calibration_model.py
@@ -7,7 +7,7 @@ from scene_common.timestamp import get_datetime_from_string
 from scene_common.transform import CameraIntrinsics
 
 class CalibrationScene:
-  _MEDIA_PATH = "/home/scenescape/SceneScape/media/"
+  _MEDIA_PATH = "/home/scenescape/Scenescape/media/"
   #FIXME: should be defined in common location accessible to both models and autocalibration
   DEFAULTS = {
     'rotation_x': 0.0,
