# docs/user-guide/api-docs/api.yaml
@@ -3,12 +3,12 @@
 
 openapi: 3.0.3
 info:
-  title: SceneScape API
+  title: Scenescape API
   version: 1.0.0
   description: |
-    API for managing and interacting with the SceneScape Manager system, including cameras, scenes, assets and more.
+    API for managing and interacting with the Scenescape Manager system, including cameras, scenes, assets and more.
   contact:
-    name: Intel SceneScape Manager Support
+    name: Scenescape Manager Support
     url: https://github.com/open-edge-platform/scenescape
   license:
     name: License
