# mapping/tools/model_utils.py
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 """
-Common utilities for model loading in SceneScape 3D mapping service.
+Common utilities for model loading in Scenescape 3D mapping service.
 """
 
 import os
