# scene_common/src/scene_common/scene_model.py
@@ -17,7 +17,7 @@ class SceneModel:
     if map_file:
       # FIXME: get the image binary data using url rather than this hack
       if 'http' in map_file:
-        map_file = map_file.replace('https://web.scenescape.intel.com', '/home/scenescape/SceneScape')
+        map_file = map_file.replace('https://web.scenescape.intel.com', '/home/scenescape/Scenescape')
       if os.path.exists(map_file):
         self.background = cv2.imread(map_file)
         self.extractMapTriangleMesh(map_file, scale)
